# django-easy-audit-clickhouse

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py
easyaudit/: admin.py  admin_helpers.py  backends.py  crudhistory_admin_mixin.py  decorators.py  models.py  protocols.py  serializers.py  settings.py  tasks.py
easyaudit/migrations/: 0001_initial.py  0002_externalservicelog_remove_crudevent_user_and_more.py  0020_alter_crudevent_options_alter_loginevent_options_and_more.py  0020_remove_requestevent_user_alter_crudevent_options_and_more.py
easyaudit/signals/: crud_flows.py  model_signals.py  request_signals.py
tests/: settings.py  test_main.py
tests/test_app/: models.py
tests/test_app/migrations/: 0001_initial.py  0002_alter_model_id.py
