[tool.poetry]
name = "easyaudit-clickhouse"
version = "0.1.0"
description = "Log library with ClickHouse integration"
license = "GPL3"
readme = "README.md"
homepage = "https://github.com/houseworksinc/easyaudit-clickhouse"
repository = "https://github.com/houseworksinc/easyaudit-clickhouse"
documentation = "https://github.com/houseworksinc/easyaudit-clickhouse"
classifiers = [
    "Environment :: Plugins",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "easyaudit"}]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=4.2,<6.0"

[tool.poetry.group.dev.dependencies]
djlint = "^1.34.1"
pre-commit = [
    {version = "~3.5", python = "<3.9"},
    {version = "^3.5", python = ">=3.9"},
]
ruff = "^0.1.11"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-django = "^4.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--ds=tests.settings",         # Forces pytest-django to use test settings
    "--ignore-glob='*/models.py'",
    "-W error",
]

[tool.ruff]
extend-exclude = ["migrations"]
ignore = ["E", "F", "W", "C", "N"]  # Ignore most checks
line-length = 92
select = []
show-fixes = true
target-version = "py38"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.per-file-ignores]
"**/test_*.py" = ["PLR2004", "S101", "S106"]
